k8s/03-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: todo-server
  namespace: todo-app

spec:
  replicas: 1

  selector:
    matchLabels:
      app: todo-server

  template:
    metadata:
      labels:
        app: todo-server

    spec:
      containers:
        - name: todo-server

          # image: ${SERVER_IMAGE}
          image: 527055790396.dkr.ecr.ap-southeast-1.amazonaws.com/do2602/hungcm-server:6

          imagePullPolicy: IfNotPresent

          ports:
            - name: http
              containerPort: 5000

          readinessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 30
            periodSeconds: 20

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"

            limits:
              cpu: "500m"
              memory: "512Mi"
