k8s/04-server-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: todo-server-service
  namespace: todo-app

spec:
  type: ClusterIP

  selector:
    app: todo-server

  ports:
    - name: http
      protocol: TCP
      port: 5000
      targetPort: 5000
