k8s/06-client-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: todo-client-service
  namespace: todo-app

spec:
  type: ClusterIP

  selector:
    app: todo-client

  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
