k8s/07-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: todo-ingress
  namespace: todo-app

  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing

    alb.ingress.kubernetes.io/target-type: ip

spec:
  ingressClassName: alb

  rules:
    - host: todo.do2602.click

      http:
        paths:
          - path: /

            pathType: Prefix

            backend:
              service:
                name: todo-client-service

                port:
                  number: 3000

    - host: api.do2602.click

      http:
        paths:
          - path: /

            pathType: Prefix

            backend:
              service:
                name: todo-server-service

                port:
                  number: 5000
